<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- Profile   -->
    <string name="profile_heading">Profile</string>
    <string name="profile_login_cta_text">Login</string>
    <string name="profile_option_change_language">Change language</string>
    <string name="profile_option_change_recipe_pref">Change recipe preference</string>
    <string name="profile_option_app_info">App info</string>
    <string name="profile_option_contact_us">Contact us</string>
    <string name="profile_option_dev_options">Dev options</string>
    <string name="profile_option_logout">Logout</string>


    <!--    About Fragment-->
    <string name="app_info_toolbar_title">App info</string>
    <string name="app_info_desc">Recipe App for\nAndroid</string>
    <string name="app_info_version">Version</string>
    <string name="app_info_recipe_info">Recipe Info</string>
    <string name="app_info_device_info">Device Info</string>
    <string name="app_info_model">Model :- %s</string>
    <string name="app_info_os_version">OS Version :- %s</string>
    <string name="app_info_user_info">User Info</string>
    <string name="app_info_guest_token">Guest token :- copy to clipboard</string>
    <string name="app_info_device_id">Registered Id :- %s</string>
    <string name="user_terms_and_conditions">Terms and condition</string>

    <!--  Dev Option selection  -->
    <string name="dev_option_preference" translatable="false">Data store</string>

    <!-- Dev Option Data store   -->
    <string name="data_store_preference_name">Data store preference</string>
    <string name="data_store_setting_value_field_hint" translatable="false">value</string>
    <string name="data_store_setting_action_put" translatable="false">Put</string>
    <string name="data_store_setting_action_remove" translatable="false">Remove</string>

    <string name="instructions_developer_options" translatable="false">Instructions</string>
    <string name="database_value_instruction_message_first" translatable="false">To view database table or find ob_id use \"Open DataBase\".</string>
    <string name="database_value_instruction_message_second" translatable="false">In open database, filters are provided to search data in entire DB.</string>
    <string name="database_value_instruction_message_third" translatable="false">To delete single entry in table, select table then insert ob_id.</string>
    <string name="database_value_instruction_message_fourth" translatable="false">To remove entire db use \"remove all\"</string>
    <string name="database_value_warning_message_first" translatable="false">Deleting entries and table might lead to unexpected crash, in that case clear data.</string>
    <string name="database_value_warning_message_second" translatable="false">Do not delete family member or family detail data in any case.</string>
    <string name="preference_value_instruction_message_first" translatable="false">\u2022 To view preference value, select key from spinner.</string>
    <string name="preference_value_instruction_message_second" translatable="false">To delete single key in table, select table then remove.</string>
    <string name="preference_value_instruction_message_third" translatable="false">To edit single key, select key then put value in value box.</string>
    <string name="preference_value_warning_message_first" translatable="false">Deleting keys might lead to unexpected crash, in that case default value will be used.</string>
    <string name="preference_value_warning_message_second" translatable="false">Do not delete firebase token and data server url.</string>
    <string name="doYouWantToProceedDeveloperOption" translatable="false">Do you want to proceed?</string>
    <string name="doYouWantToDeleteDeveloperOption" translatable="false">If you proceed data will be removed. \nIs that OK?</string>
    <string name="doYouWantToPutPreferenceDeveloperOption" translatable="false">If you proceed value will be changed. \nIs that OK?</string>
    <string name="yesDeleteDeveloperOption" translatable="false">Yes, delete</string>
    <string name="yesPutPreferenceDeveloperOption" translatable="false">Yes, put</string>
    <string name="warning" translatable="false">Warning</string>
    <string name="empty_string_placeholder">%s</string>
    <string name="EINTERNAL">Internal</string>

    <!--   Logout confirmation -->
    <string name="logout_dialog_confirmation_title">Confirmation</string>
    <string name="logout_dialog_confirmation_message">Are you sure you want to logout?</string>
    <string name="logout_dialog_confirmation_positive">Yes</string>
    <string name="logout_dialog_confirmation_negative">No</string>
</resources>