<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.devdd.recipe.feature_profile.ui.profile.ProfileViewModel" />

    </data>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/profile_fragment_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/profile_fragment_scroll_view_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/profile_fragment_heading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/profile_heading"
                android:textAppearance="?textAppearanceHeadline5"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.1" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/profile_fragment_user_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/profile_fragment_heading"
                app:srcCompat="@drawable/ic_profile_logo" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/profile_fragment_menu_container"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="vertical"
                android:paddingHorizontal="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/profile_fragment_user_logo">

                <View
                    android:id="@+id/profile_fragment_action_change_language_divider"
                    android:layout_width="match_parent"
                    android:layout_height="0.7dp"
                    android:background="@color/grey_400" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/profile_fragment_action_change_language_pref"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/selector_click_ripple"
                    android:drawablePadding="16dp"
                    android:gravity="center_vertical"
                    android:onClick="@{()->viewModel.navigateToChangeLanguage()}"
                    android:padding="8dp"
                    android:text="@string/profile_option_change_language"
                    android:textAppearance="?textAppearanceSubtitle2"
                    app:drawableStartCompat="@drawable/ic_language" />

                <View
                    android:id="@+id/profile_fragment_action_change_recipe_pref_divider"
                    android:layout_width="match_parent"
                    android:layout_height="0.7dp"
                    android:background="@color/grey_400" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/profile_fragment_action_change_recipe_pref"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/selector_click_ripple"
                    android:drawablePadding="16dp"
                    android:gravity="center_vertical"
                    android:onClick="@{()->viewModel.navigateToChangeRecipePref()}"
                    android:padding="8dp"
                    android:text="@string/profile_option_change_recipe_pref"
                    android:textAppearance="?textAppearanceSubtitle2"
                    app:drawableStartCompat="@drawable/ic_dish" />

                <View
                    android:id="@+id/profile_fragment_action_app_info_divider"
                    android:layout_width="match_parent"
                    android:layout_height="0.7dp"
                    android:background="@color/grey_400" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/profile_fragment_action_app_info"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/selector_click_ripple"
                    android:drawablePadding="16dp"
                    android:gravity="center_vertical"
                    android:onClick="@{()->viewModel.navigateToAppInfo()}"
                    android:padding="8dp"
                    android:text="@string/profile_option_app_info"
                    android:textAppearance="?textAppearanceSubtitle2"
                    app:drawableStartCompat="@drawable/ic_info" />

                <View
                    android:id="@+id/profile_fragment_action_dev_options_divider"
                    toggleVisibility="@{viewModel.debugMode}"
                    android:layout_width="match_parent"
                    android:layout_height="0.7dp"
                    android:background="@color/grey_400" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/profile_fragment_action_dev_options"
                    toggleVisibility="@{viewModel.debugMode}"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/selector_click_ripple"
                    android:drawablePadding="16dp"
                    android:gravity="center_vertical"
                    android:onClick="@{()->viewModel.navigateToDeveloperOption()}"
                    android:padding="8dp"
                    android:text="@string/profile_option_dev_options"
                    android:textAppearance="?textAppearanceSubtitle2"
                    app:drawableStartCompat="@drawable/ic_dev_option" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.7dp"
                    android:background="@color/grey_400" />
            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</layout>